<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    android:id="@+id/main"
    android:background="#FFFFFF">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="70dp">

        <!-- Logo and Title -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="24dp">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="#00D084"
                android:padding="8dp"
                android:src="@drawable/icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/app_name1"
                android:textColor="#000000"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>

        <!-- Title -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:text="@string/forgot_password"
            android:textColor="#000000"
            android:textSize="22sp"
            android:textStyle="bold" />

        <!-- Subtitle -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/forgot_password_subtitle"
            android:textColor="#666666"
            android:textSize="15sp" />

        <!-- Input Fields -->
        <EditText
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/edittext_background"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/send_code"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            app:backgroundTint="#00D084"
            android:padding="12dp"
            android:background="@drawable/ripple_button_background"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/send_code"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/code_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/edittext_background"
            android:hint="@string/code_hint"
            android:inputType="text"
            android:padding="12dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/edittext_background"
            android:orientation="horizontal"
            android:padding="12dp">

            <EditText
                android:id="@+id/text_password_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/edittext_background"
                android:hint="@string/hint_password"
                android:inputType="textPassword" />

            <ImageView
                android:id="@+id/img_show_hide_password1"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:padding="4dp"
                android:src="@drawable/ic_eye_off" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/edittext_background"
            android:orientation="horizontal"
            android:padding="12dp">

            <EditText
                android:id="@+id/text_repassword_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/edittext_background"
                android:hint="@string/repassword_hint"
                android:inputType="textPassword" />

            <ImageView
                android:id="@+id/img_show_hide_password"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:padding="4dp"
                android:src="@drawable/ic_eye_off" />
        </LinearLayout>

        <Button
            android:id="@+id/reset_password"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            app:backgroundTint="#00D084"
            android:padding="12dp"
            android:background="@drawable/ripple_button_background"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/reset_password"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/button_back"
            app:backgroundTint="#00D084"
            android:background="@drawable/ripple_button_background"
            android:src="@drawable/baseline_arrow_back_24"/>
    </LinearLayout>
</ScrollView>
